# Philips-System

./: Bridge.cpp  Bridge.h  BridgeWidget.cpp  BridgeWidget.h  CMakeLists.txt  ExtendedAuthWidget.cpp  ExtendedAuthWidget.h  ExtendedRegistrationWidget.cpp  ExtendedRegistrationWidget.h  Group.cpp  Group.h  GroupWidget.cpp  GroupWidget.h  Light.cpp  Light.h  LightState.cpp  LightState.h  LightWidget.cpp  LightWidget.h  MainWidget.cpp  MainWidget.h  README.md  Schedule.cpp  Schedule.h  ScheduleWidget.cpp  ScheduleWidget.h  Session.cpp  Session.h  User.cpp  User.h  UserDetailsModel.cpp  UserDetailsModel.h  UserInterfaceWidget.cpp  UserInterfaceWidget.h  main.cpp  strings.xml  wt-philip-hue  wt-philip-hue.db
